# bitacora

./: .env.development  .env.production  .gitignore  ANALISIS_POTENCIAL_COMPLETO.md  BREAKTHROUGH_HISTORICO_MULTI_LLM_7D.md  COMMANDS_IMPLEMENTATION_REPORT.md  Cargo.toml  LOGRO_HISTORICO_20250910.md  MONITOR_REPORTER_ARCHITECTURE_PLAN.md  ROADMAP_MANANA_13SEP2025.md  SESSION_MULTIAGENT_COMPLETION.md  SpeakerPlayer_Spec.md  YO  backup_project.sh  published_routier.md  setup_structure.sh  timonel_bitacora.md  timonel_bitacora_v2.md
bitacora_v0.1/bitacora-rust/test-api/: .gitignore  Cargo.toml
bitacora_v1.0/: BSTRADIVARIUS_ARCHITECTURE_ANALYSIS.md  BSTRADIVARIUS_COMPLETE.md  BSTRADIVARIUS_FIRE_TESTS.md  BSTRADIVARIUS_FLOW_DIAGRAM.md  BSTRADIVARIUS_MANUAL_SIMPLE.md  BSTRADIVARIUS_REFACTORING_SUMMARY.md  BSTRADIVARIUS_SYMPHONY.md  Cargo.toml  ESTADO_SESION_2025-11-30.md
bitacora_v1.0/BITACORA_KNOWLEDGE_GRAPH/: INDEX.md  README.md
bitacora_v1.0/BITACORA_KNOWLEDGE_GRAPH/CONCEPTS/: human-recognition-mini-llm.md
bitacora_v1.0/BITACORA_KNOWLEDGE_GRAPH/CROSS_REFERENCES/: cost-optimization.md
bitacora_v1.0/BITACORA_KNOWLEDGE_GRAPH/EVOLUTION/: thought-experiments.md
bitacora_v1.0/PUBLIC/: ARCHITECTURE.md  COPYRIGHT  COPYRIGHT.backup  LICENSE  PHILOSOPHY.md  PROVISIONAL_PATENT_GUIDE.md.backup  README.md
bitacora_v1.0/RECREO_CON_MI_COMPANERO/: JARDIN_DE_REFLEXIONES.md
bitacora_v1.0/ROADMAP_V2/: ANALISIS_STORAGE_Y_ECONOMIA.md  BACKUP_MANAGEMENT_SUMMARY.md  CHECKLIST_TREE_V2.md  CHECKLIST_V2.md  COMPONENTES_FUTUROS_PENDIENTES.md  DA-034_COMPLETION_SUMMARY.md  DOCS_VALIDATION_20251123.md  ESTADO_PROGRESO_VISUAL.md  GUIA.md  METODOLOGIA_V1_6_GIT_CHECKLIST.md  METOD_DOCS.md  PXLANG_V1_ARCHITECTURE.md  PXLang_Bitacora_Symbolic_Memory_Summary.md  PXLang_Bitacora_Technical_Design_Rust.md  README.md  RETOS.md  SOUL_LAYER_VISION.md  VALIDATION_REPORT_PHASE6_2.md  ZOOM_INGESTION_SENSORY_ENGINE.md  test_watcher.md
bitacora_v1.0/ROADMAP_V2/00_VISION/: 01_filosofia-y-proposito.md  02_principios-cosmos-y-filosofia-arquitectonica.md  03_decisiones-arquitectonicas.md  04_arquitectura-sistema-7-capas.md  05a_bita-1-fbcu-specification.md  05b_bita-2-aca-7d-specification.md  06_breakthrough-133-8-validacion.md  07_nhes-vision-v2-0.md  08_shuidao-cognitive-architecture.md  09_metabolic-digestion-vision.md  09_pxlang-vision-filosofia.md  18.6_immune-system-vitality-logs.md  DA-033_DYNAMIC_TOPIC_TONE_SYSTEM.md  DA-034_SMALL_WORLD_NETWORKS.md  DA-035_BSTRADIVARIUS_ECOSYSTEM_LIBRARIAN.md  DA-035_HYBRID_INTELLIGENCE_ENGINE.md  README.md  _TEMP.md  _refactoring-monte-carlo-to-bitacora.md
bitacora_v1.0/ROADMAP_V2/01_ARQUITECTURA/: 01_sistema-dual-databases.md  01a_sistema-dual-databases-implementation.md  02_flujo-datos-end-to-end.md  03_pixel-storage-deep-dive.md  04_content-addressable-ids.md  04_importacion-estandarizacion-datos.md  06_sensory-engine-y-ctx7d.md  07_fbcu-y-flowpacks.md  08_indexacion-embeddings-hnsw.md  09_reconocimiento-patrones.md  10_routier-y-hubspoke.md  11_respuesta-adaptada-llm.md  12_shuidao-intention-detection.md  13_hybrid-intelligence-engine.md  13_pxlang-arquitectura-integracion.md  14_qpx-quantumdao-revolucion.md  15_pxlang-qpx-query-language.md  16_conversation-memory-example.md  17_query-language-implementation.md  18_metabolic-digestion-system.md  README.md  VALIDACION_FINAL_20251123.md  _05_cbor-serialization.md
bitacora_v1.0/ROADMAP_V2/02_COMPONENTES/: 01_sensory-engine.md  02_context-token-7d.md  03_fbcu-core.md  04_flowpacks.md  04a_flowpacks-implementation-report.md  05_telescopedb.md  06_voxeldb.md  07_routier-navigator.md  08_routier-navigator-implementation.md  09_hubspoke-navigator.md  09_relationship-psychology-analyzer.md  10_lip-protocol.md  11_mtt-dsl-templates.md  12_expertise-generation.md  13_shuidao-cognitive-engine.md  13a_shuidao-topic-graph.md  13b_shuidao-emotional-space.md  14_icebreaker-engine.md  15_pxlang-symbolic-engine.md  15a_pxlang-unicode-storage-multilingual.md  16_shuidao-cognitive-router-guide.md  17_bstradivarius-llm-librarian.md  17_data-import-engine.md  18.1_hyperlink-content-extraction.md  18.2_image-recognition-analysis.md  18.3_voice-to-text-transcription.md  18_hyperlink-extractor.md  README.md  TEMP_ANALISIS_METOD_DOCS.md  VALIDACION_FINAL_02_COMPONENTES.md
bitacora_v1.0/ROADMAP_V2/03_INTEGRACION/: 01_sensory-to-telescopedb.md  03_hubspoke-routing.md  04_breakthrough-detection.md  05_fbcu-lifecycle.md  06_flowpacks-compression.md  07_lip-persistence.md  08_routier-learning-paths.md  09_mtt-dsl-template-application.md  10_shuidao-intention-workflow.md  README.md  VALIDACION_FINAL_03_INTEGRACION.md
bitacora_v1.0/ROADMAP_V2/03_PLATFORM/: 18.7_mobile-platform-restrictions.md
bitacora_v1.0/ROADMAP_V2/04_IMPLEMENTACION/: 00_FASE_0_QPX_IMPLEMENTATION.md  BSTRADIVARIUS_V2_NEXT_STEPS.md  FLOWPACKS_IMPLEMENTATION_PLAN.md  PHASE_1_FOUNDATIONS.md  PHASE_2_COGNITIVE_ARCH.md  PHASE_3_ENHANCEMENTS.md  PHASE_4_OPTIMIZATION.md  PHASE_5_TESTING.md  (+3 more)
bitacora_v1.0/examples/: test_behavioral_extractor.rs  test_biographical_extractor.rs  test_conversation_e2e.rs  test_ctx7d_enhancement.rs  test_digestion.rs  test_digestion_deep_analysis.rs  test_emotional_space_integration.rs  test_expertise_generation.rs  test_extraction_real_data.rs  test_fbcu.rs  test_flowpacks.rs  test_hubspoke.rs  test_icebreaker.rs  test_lip.rs  test_procedural_engine.rs  test_quarantine.rs  test_real_whatsapp.rs  test_relationship_extractor.rs  test_routier.rs  test_sensory_engine.rs  test_shuidao_complete.rs  test_shuidao_intention.rs  test_shuidao_operational.rs  test_shuidao_router.rs  test_telescopedb_integration.rs  test_temporal_extractor.rs  test_topic_graph_integration.rs  test_voxeldb_integration.rs
bitacora_v1.0/scripts/: backup.sh
bitacora_v1.0/src/: lib.rs
crates/bitacora-records/: Cargo.toml
crates/bitacora-timestamp/: Cargo.toml
integrador_skeleton/: Cargo.toml  README.txt  engranaje_segundo  programa.logic.txt  programa.meta.txt  programa.run.txt
integrador_skeleton/in/: doc_usuario.txt
integrador_skeleton/src/: engranaje_segundo.rs  main.rs
(+571 files in other folders)
