[workspace]
members = [
    "crates/bitacora-core",
    "crates/bitacora-templates", 
    "crates/bitacora-api",
    "crates/bitacora-backup",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[workspace.dev-dependencies]
tokio-test = "0.4"

[package]
name = "bitacora-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bitacora-api = { path = "crates/bitacora-api" }
