[package]
name = "integrador"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integrador"
path = "src/main.rs"

[[bin]]
name = "engranaje_segundo"
path = "src/engranaje_segundo.rs"

[dependencies]
shell-words = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
clap = { version = "4.0", features = ["derive"] }
