[package]
name = "bitacora-records"
version = "0.1.0"
edition = "2021"
description = "Business logic layer for Bitacora - manages sessions, actions, topics and sparks"

[dependencies]
bitacora-core = { path = "../bitacora-core" }
bitacora-storage = { path = "../bitacora-storage" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# JSON handling
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
