[package]
name = "bitacora-timestamp"
version = "0.1.0"
edition = "2021"

[dependencies] 
bitacora-core = { path = "../bitacora-core" }
bitacora-config = { path = "../bitacora-config" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
nix = { version = "0.28", features = ["signal", "process"] }
sysinfo = "0.30"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
