[package]
name = "bitacora-test-api"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "timeout"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "test-api"
path = "src/main.rs"
