[package]
name = "velalock-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "VelaLock™ core: enrollment, policy, vault, and VelaSonar hooks."

[dependencies]
ed25519-dalek = "2"
x25519-dalek = "2"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
rand_core = "0.6"
zeroize = "1"
opaque-ke = "2"
snow = "0.9"
ciborium = "0.2"
coset = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"