[package]
name = "bitacora-ai-generator"
version = "0.1.0"
edition = "2021"
authors = ["slimbron57 <slimbron57@gmail.com>"]
description = "AI-powered autonomous template generation system for BitaFlow Navigator - Plugin architecture"
license = "MIT"
repository = "https://github.com/bitacora-dev/bitacora"
homepage = "https://bitacora.dev"
documentation = "https://docs.bitacora.dev/ai-generator"
keywords = ["ai", "template", "generator", "automation", "bitaflow"]
categories = ["development-tools", "template-engine", "artificial-intelligence"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bitacora_ai_generator"
path = "src/lib.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# AI/ML dependencies (optional features)
reqwest = { version = "0.11", features = ["json"], optional = true }
openai-api-rs = { version = "6.0", optional = true }

# Dependencias internas de Bitacora
bitacora-core = { path = "../bitacora-core" }
bitacora-navigator = { path = "../bitacora-navigator" }

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "ai_generator_demo"
path = "examples/ai_generator_demo.rs"

[features]
default = []
# AI provider features
openai = ["openai-api-rs", "reqwest"]
ollama = ["reqwest"]
anthropic = ["reqwest"]
# Full AI support
full-ai = ["openai", "ollama", "anthropic"]
