[package]
name = "bitacora-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
bitacora-core = { path = "../bitacora-core" }
bitacora-storage = { path = "../bitacora-storage" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for external connectors
reqwest = { version = "0.11", features = ["json", "stream"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Collections
dashmap = "5.0"

# Regex for content filtering
regex = "1.0"

# Git integration
git2 = { version = "0.18", optional = true }

# Web scraping
scraper = { version = "0.18", optional = true }

# ML/AI features (optional)
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }

[features]
default = ["git", "web-scraping"]
git = ["git2"]
web-scraping = ["scraper"]
ml = ["candle-core", "candle-nn"]

[dev-dependencies]
tokio-test = "0.4"
