[package]
name = "bitacora-backup"
version = "0.1.0"
edition = "2021"
description = "Sistema de respaldos automáticos para Bitacora"

[dependencies]
bitacora-core = { path = "../bitacora-core" }
# bitacora-storage = { path = "../bitacora-storage" }  # TODO: Crear en Fase 2
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

# Compresión
flate2 = "1.0"

# Encriptación
aes-gcm = "0.10"
rand = "0.8"

# Storage backends
aws-sdk-s3 = { version = "0.39", optional = true }

[features]
default = ["local-storage"]
local-storage = []
s3-storage = ["aws-sdk-s3"]

[dev-dependencies]
tokio-test = "0.4"
