[package]
name = "bitacora-commands"
version = "0.1.0"
edition = "2021"
description = "Command parsing, execution, and registry system for Bitacora"
license = "MIT OR Apache-2.0"

[dependencies]
# Core Bitacora dependencies
bitacora-core = { path = "../bitacora-core" }
bitacora-config = { path = "../bitacora-config" }
bitacora-git = { path = "../bitacora-git" }
bitacora-records = { path = "../bitacora-records" }
bitacora-session = { path = "../bitacora-session" }
bitacora-storage = { path = "../bitacora-storage" }
bitacora-templates = { path = "../bitacora-templates" }

# Async runtime and traits
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Command line parsing
clap = { version = "4.4", features = ["derive", "cargo"] }
shlex = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Dynamic loading (for future database-stored commands)
libloading = { version = "0.8", optional = true }

[features]
default = []
dynamic-loading = ["libloading"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
