[package]
name = "bitacora-core"
version = "0.1.0"
edition = "2021"
description = "Core domain types and traits for Bitacora"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
