[package]
name = "bitacora-git"
version = "0.1.0"
edition = "2021"

[dependencies]
bitacora-core = { path = "../bitacora-core" }
tokio = { version = "1.0", features = ["process", "fs", "macros", "rt"] }
async-trait = "0.1"
tracing = "0.1"
regex = "1.0"
tempfile = "3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
