[package]
name = "bitacora-navigator"
version = "0.1.0"
edition = "2021"
authors = ["slimbron57 <slimbron57@gmail.com>"]
description = "Revolutionary Hybrid Navigation System with BitaFlow DSL Integration - AI-powered autonomous development workflows"
license = "MIT"
repository = "https://github.com/bitacora-dev/bitacora"
homepage = "https://bitacora.dev"
documentation = "https://docs.bitacora.dev/navigator"
keywords = ["navigation", "ai", "automation", "workflows", "templates"]
categories = ["development-tools", "template-engine", "automation"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "bitacora_navigator"
path = "src/lib.rs"

[[example]]
name = "bitaflow_demo"
path = "examples/bitaflow_demo.rs"

[[example]]
name = "template_repository_demo"
path = "examples/template_repository_demo.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Dependencias internas de Bitacora
bitacora-core = { path = "../bitacora-core" }
bitacora-config = { path = "../bitacora-config" }
bitacora-storage = { path = "../bitacora-storage" }
bitacora-session = { path = "../bitacora-session" }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
