[package]
name = "bitacora-session"
version = "0.1.0"
edition = "2021"
description = "Session management service for Bitacora development workflow tracking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/bitacora"

[dependencies]
bitacora-core = { path = "../bitacora-core" }
# bitacora-timestamp = { path = "../bitacora-timestamp" }  # Disabled until errors are fixed
# bitacora-git = { path = "../bitacora-git" }  # Disabled until timestamp is fixed
# bitacora-storage = { path = "../bitacora-storage" }  # Disabled until timestamp is fixed
# bitacora-config = { path = "../bitacora-config" }  # Using internal config for now

# Async runtime and traits
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional dependencies for state persistence
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
