[package]
name = "bitacora-storage"
version = "0.1.0"
edition = "2021"
description = "Storage layer for Bitacora - MongoDB and fallback storage implementations"

[dependencies]
bitacora-core = { path = "../bitacora-core" }
bitacora-config = { path = "../bitacora-config" }
mongodb = "2.8"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
