[package]
name = "bitacora-templates"
version = "0.1.0"
edition = "2021"
description = "Dynamic template system for Bitacora action responses"
authors = ["Bitacora Team"]
license = "MIT"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

# Async support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Template engines
handlebars = { version = "6.1", optional = true }
tera = { version = "1.20", optional = true }

# Local dependencies
bitacora-core = { path = "../bitacora-core" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["handlebars"]
handlebars = ["dep:handlebars"]
tera = ["dep:tera"]
