[package]
name = "bfl_translator"
version = "0.1.0"
edition = "2021"
description = "BitaFlow translator: .md <-> .bt/.bfl plus alias validation and questionnaire helpers"
license = "MIT"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
pulldown-cmark = "0.10"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
